RESOLVED FIXED 246324
fix comment in Assertions.h to point to the right place
https://bugs.webkit.org/show_bug.cgi?id=246324
Summary fix comment in Assertions.h to point to the right place
Cameron McCormack (:heycam)
Reported 2022-10-10 23:18:56 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-10 23:19:07 PDT
Cameron McCormack (:heycam)
Comment 2 2022-10-10 23:24:02 PDT
EWS
Comment 3 2022-10-10 23:27:20 PDT
Committed 255378@main (520379e30f3b): <https://commits.webkit.org/255378@main> Reviewed commits have been landed. Closing PR #5228 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.