Fix comment in Assertions.h to point to the right place https://bugs.webkit.org/show_bug.cgi?id=246324 <rdar://problem/101016546>

Unreviewed comment fix.

* Source/WTF/wtf/Assertions.h:

Canonical link: https://commits.webkit.org/255378@main